# crackem

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json
example/: dummy.cpp  main.cpp
include/break/: sharedlibrary.hpp  signature.hpp  vfthook.hpp
include/hack/: asmhook.hpp  memory.hpp  sharedlibrary.hpp
src/: CMakeLists.txt  asmhook.hpp  encrypt.cpp  memory.cpp  memory.hpp  sharedlibrary.cpp  sharedlibrary.hpp  signature.cpp  signature.hpp  vfthook.cpp  vfthook.hpp
